--- a/app/templates/app/administrador/proveedores/registroProveedores.html
+++ b/app/templates/app/administrador/proveedores/registroProveedores.html
@@ -4,27 +4,80 @@
 {% load static %}
     <!-- /.content-wrapper -->
     
-    {% load crispy_forms_tags %}
     <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
       <h2>Registro de Proveedores</h2>
       <hr>
-      <form action="" method="post">
-        {% csrf_token %}
-        {{ form | crispy }}
+      <form action="/crear-proveedor/" method="GET">
+        
         <!-- INPUT COMBOX CON LA API DE LISTAR -->
-        <select name="giro" id="select-giro">
-         
-
-        </select>
+        
         <div class="col">
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="">Rut:</label>
+              <input type="text" name="p_rut" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="" >DV:</label>
+              <input type="text" name="p_dv" id="" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="" >Razon Social:</label>
+              <input type="text" name="p_razon_social" id="" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="" >Nombre:</label>
+              <input type="text" name="p_nom_corto" id="" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="" >Telefono:</label>
+              <input type="text" name="p_telefono" id="" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="" >Correo:</label>
+              <input type="email" name="p_correo" id="" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="">Giro</label>
+              <select class="form-control" name="p_id_giro" id="select-giro">
+              </select>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="">Dirección</label>
+              <input type="text" name="p_direccion" id="" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="">N° Dirección</label>
+              <input type="text" name="p_num_dir" id="" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="">N° Casa</label>
+              <input type="text" name="p_nro_casa" id="" class="form-control">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="">Tipo Dirección</label>
+              <select class="form-control" name="p_tipo_dir" id="">
+                <option value="1">aca falta plsql</option>
+              </select>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="">Comuna</label>
+              <select class="form-control" name="p_id_com" id="">
+                <option value="1">aca falta plsql</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="col mt-4">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
               <a href="{% url 'indexProveedores' %}" 
               style="color: white;"
-              >Ir al inicio</a>
+              >Volver</a>
             </button>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
-          </div>
+
+          </div>  
         </div>
       </form>
     </div>
