--- a/app/templates/app/cliente/pagoCliente.html
+++ b/app/templates/app/cliente/pagoCliente.html
@@ -1,7 +1,17 @@
 {% extends 'app/cliente/baseCliente.html' %}
 {% block contenido %}
 {% load static %}
-
-
-
+<br>
+<h2 class="titulo_menu">Seleccione metodo de Pago</h2>
+<br><br><br><br>
+<div class="d-flex justify-content-center">
+    <button type="button" class="btnPago btn-primary btn-lg btn-success">Efectivo</button>
+    <button type="button" class="btnPago btn-primary btn-lg btn-success">Tarjeta Bancaria</button>
+</div>
+</div>
+<br>
+<div class="d-flex justify-content-center">
+    &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;
+    <button type="button" class="btn btn-primary btn-lg">Continuar</button>
+</div>
 {% endblock %}
