--- a/app/templates/app/cliente/clienteMenu.html
+++ b/app/templates/app/cliente/clienteMenu.html
@@ -67,7 +67,15 @@
             </tr>
         </tbody>
     </table>
+    
 </div>
 
 
+</div>
+<div class="d-flex justify-content-center">
+    <button type="button" class="btn btn-primary btn-lg">Agregar Producto</button>
+    &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;
+    <button type="button" class="btn btn-primary btn-lg">Finalizar Pedido</button>
+</div>
 {% endblock %}
+
