--- a/app/templates/app/cliente/detalleCliente.html
+++ b/app/templates/app/cliente/detalleCliente.html
@@ -1,6 +1,7 @@
 {% extends 'app/cliente/baseCliente.html' %}
 {% block contenido %}
 {% load static %}
+<br>
 <h2 class="titulo_pedido">Detalle de Consumo</h2>
 <div>
     <table id="table" class="table table-striped table-bordered" style="width: 100%;" data-toggle="table"
@@ -32,10 +33,37 @@
         </tbody>
     </table>
 </div>
+
+<div class="radioButton">
+    <h4 class="form-check form-check-inline">Propina</h4>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+        <label class="form-check-label" for="inlineCheckbox1">0 %</label>
+    </div>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+        <label class="form-check-label" for="inlineCheckbox1">5 %</label>
+    </div>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+        <label class="form-check-label" for="inlineCheckbox2">10 %</label>
+    </div>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+        <label class="form-check-label" for="inlineCheckbox2">15 %</label>
+    </div>
+</div>
+<br>
 <div>
     <h2 class="total">Total a Pagar:</h2>
 </div>
 
-
+</div>
+<br>
+<div class="d-flex justify-content-center">
+    <button type="button" class="btn btn-primary btn-lg">Confirmar Cobro</button>
+    &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;
+    <button type="button" class="btn btn-primary btn-lg">Soliocitar Revision</button>
+</div>
 
 {% endblock %}
