--- a/app/templates/app/administrador/menus/registroMenus.html
+++ b/app/templates/app/administrador/menus/registroMenus.html
@@ -83,10 +83,21 @@
     <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
       <h2>Registro de Menu</h2>
       <hr>
-      <form action="" method="post">
-        {% csrf_token %}
-        {{ form | crispy }}
-        <div class="col">
+      <form action="/crear-menus/" method="GET">
+        <div class="col mt-4">
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="p_nro_menu">Nro° Menu:</label>
+              <input type="text" name="p_nro_menu" class="form-control" required>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="p_nom_menu" >Nombre:</label>
+              <input type="text" name="p_nom_menu" id="" class="form-control" required>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mt-4">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
               <a href="{% url 'indexMenus' %}" 
