--- a/app/templates/app/administrador/menus/indexMenus.html
+++ b/app/templates/app/administrador/menus/indexMenus.html
@@ -31,8 +31,10 @@
         <td>{{m.1}}</td>
         <td>{{m.2}}</td>
         <td class="p-1">
+          <a href="{% url 'modificarMenus' m.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-eye"> Detalle</i></a>
+          <a href="{% url 'registroMenusProductos' m.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-plus"> Producto</i></a>
           <a href="{% url 'modificarMenus' m.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
+          <a onclick="eliminarMenu({{ m.0 }})" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
         </td>
       </tr>
       {% endfor %}
@@ -47,5 +49,31 @@
   font-size: 14px;
 }
 </style>
+
+{% endblock %}
+
+{% block js %}
+
+  <script>
+    function eliminarMenu(id)
+    {
+      swal.fire({
+        "title": "¿Estás seguro?",
+        "text": "¡Estás apunto de eliminar el menu!",
+        "icon": "question",
+        "showCancelButton": true,
+        "cancelButtonText": "No, cancelar",
+        "confirmButtonText": "Si, Eliminar",
+        "reverseButtons": true,
+        "confirmButtonColor": "#dc3545",
+        "cancelButtonColor": "#0069D9"
+      })
+      .then(function(result) {
+        if(result.isConfirmed) {
+          window.location.href = "eliminar/"+id+"/"
+        }
+      })
+    }
+  </script>
 
 {% endblock %}
