[ADD] maqueta productos

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -127,6 +127,10 @@
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Insumos</span>
           </a> 
+          <a class="nav-link" href="{% url 'indexProductos' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Productos</span>
+          </a> 
           <a class="nav-link" href="{% url 'indexRecetas' %}" select>
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Recetas</span>
