--- a/app/templates/app/administrador/mesas/registroMesas.html
+++ b/app/templates/app/administrador/mesas/registroMesas.html
@@ -2,91 +2,36 @@
 
 {% block js %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      $('#id_username').prop('required', true);
-      $('#id_first_name').prop('required', true);
-      $('#id_last_name').prop('required', true);
-
-      var minLength = 3;
-
-      $("#id_username").on("blur", function(){
-        var value = $(this).val();
-        if (value.length < minLength) {
-          $("#id_username").val("");
-
-          Swal.fire({
-            position: 'center',
-            icon: 'warning',
-            title: 'El nombre debe tener mínimo 3 carácteres',
-            showConfirmButton: false,
-            timer: 1500
-          })
-        }
-      });
-
-      $("#id_first_name").on("blur", function(){
-        var value = $(this).val();
-        if (value.length < minLength) {
-          $("#id_first_name").val("");
-
-          Swal.fire({
-            position: 'center',
-            icon: 'warning',
-            title: 'El nombre debe tener mínimo 3 carácteres',
-            showConfirmButton: false,
-            timer: 1500
-          })
-        }
-      });
-
-      $("#id_last_name").on("blur", function(){
-        var value = $(this).val();
-        if (value.length < minLength) {
-          $("#id_last_name").val("");
-    
-          Swal.fire({
-            position: 'center',
-            icon: 'warning',
-            title: 'El apellido debe tener mínimo 3 carácteres',
-            showConfirmButton: false,
-            timer: 1500
-          })
-        }
-      });
-
-      $("#id_email").on("blur", function(){
-        var value = $(this).val();
-        if (value.length < (minLength + 5)) {
-          $("#id_email").val("");
-    
-          Swal.fire({
-            position: 'center',
-            icon: 'warning',
-            title: 'El email debe tener mínimo 8 carácteres',
-            showConfirmButton: false,
-            timer: 1500
-          })
-        }
-      });
-    });
-
-    
-  </script>
 {% endblock %}
 
 {% block contenido %}
 {% load static %}
-    <!-- /.content-wrapper -->
-    
-    {% load crispy_forms_tags %}
+
     <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
       <h2>Registro de Mesas</h2>
       <hr>
-      <form action="" method="post">
-        {% csrf_token %}
-        {{ form | crispy }}
+      <form action="/crear-mesas/" method="GET">
         <div class="col">
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="p_nro_mesa">N° Mesa:</label>
+              <input type="text" name="p_nro_mesa" class="form-control" required>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="p_cant_sillas" >Cantidad Sillas:</label>
+              <input type="text" name="p_cant_sillas" id="" class="form-control" required>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="p_id_ubi">Ubicaciones</label>
+              <select class="form-control" name="p_id_ubi" id="" required>
+                {% for u in Ubicaciones %}
+                  <option value="{{u.0}}">{{u.1}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="col mt-4">
           <div class="row">
             <button class="btn btn-primary d-flex mr-auto">
               <a href="{% url 'indexMesas' %}" 
@@ -94,7 +39,8 @@
               >Volver</a>
             </button>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
-          </div>
+
+          </div>  
         </div>
       </form>
     </div>
