--- a/app/templates/app/administrador/mesas/editarMesas.html
+++ b/app/templates/app/administrador/mesas/editarMesas.html
@@ -67,26 +67,48 @@
 
 {% block contenido %}
 {% load static %}
-    <!-- /.content-wrapper -->
-    
-    {% load crispy_forms_tags %}
-    <div id="register" class="col-lg-6 col-sm-9 mt-5 mx-1 d-block mx-auto" style="text-align:center;">
-      <form action="" method="post">
-        <h2>Editar Mesa</h2>
-        <hr>
-        {% csrf_token %}
-        {{ form | crispy }}
-        <div class="col">
-          <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexMesas' %}" style="color: white;">Volver</a>
-            </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
+
+  <div id="register" class="col-lg-6 col-sm-9 mt-5 mx-1 d-block mx-auto" style="text-align:center;">
+    <form action="/editar-mesas/" method="GET">
+      <h2>Editar Mesa</h2>
+      <hr>
+      <div class="col">
+        {% for m in Mesas %}
+        <div class="row">
+          <!-- ID -->
+          <input type="hidden" name="id" value="{{m.0}}">
+          <div class="form-group col-md-6">
+            <label for="p_nro_mesa">N° Mesa:</label>
+            <input type="number" name="p_nro_mesa" class="form-control" value="{{m.1}}" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="p_cant_sillas" >Cantidad Sillas:</label>
+            <input type="number" name="p_cant_sillas" id="" class="form-control" value="{{m.2}}" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="p_id_ubi">Ubicaciones</label>
+            <select class="form-control" name="p_id_ubi" id="" required>
+              {% for u in Ubicaciones %}
+                <option value="{{u.0}}">{{u.1}}</option>
+              {% endfor %}
+            </select>
           </div>
         </div>
-      </form>
-    </div>
-  <!-- /#wrapper -->
+        {% endfor %}
+      </div>
+      <div class="col mt-4">
+        <div class="row">
+          <button class="btn btn-primary d-flex mr-auto" type="button">
+            <a href="{% url 'indexMesas' %}" 
+            style="color: white;"
+            >Volver</a>
+          </button>
+          <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
+        </div>  
+      </div>
+    </form>
+  </div>
+
 
   <style>
     #user-table{
