--- a/app/templates/app/administrador/proveedores/indexProveedores.html
+++ b/app/templates/app/administrador/proveedores/indexProveedores.html
@@ -36,9 +36,9 @@
         <td>{{p.1}}</td>
         <td>{{p.4}}</td>
         <td>{{p.5}}</td>
-        <td>{{p.6}}</td>
+        <td>{{p.7}}</td>
         <td class="p-1">
-          <a href="" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
+          <a href="{% url 'modificarProveedores' p.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
           <a onclick="eliminarProveedor({{ p.0 }})" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
         </td>
       </tr>
