--- a/app/templates/app/administrador/menus/registroMenusProductos.html
+++ b/app/templates/app/administrador/menus/registroMenusProductos.html
@@ -9,21 +9,24 @@
 {% load static %}
     <!-- /.content-wrapper -->
     
-    {% load crispy_forms_tags %}
     <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
       <h2>Registro de Menu</h2>
       <hr>
-      <form action="/crear-menus/" method="GET">
+      <form action="/crear-menus-productos/" method="GET">
         <div class="col mt-4">
           <div class="row">
             <input type="hidden" name="p_id_menu" value="{{id}}">
             <div class="form-group col-md-12">
-              <label for="p_nro_menu">Producto</label>
-              <input type="text" name="p_nro_menu" class="form-control" required>
+              <label for="p_id_producto">Producto</label>
+              <select class="form-control" name="p_id_producto" id="" required>
+                {% for p in Productos %}
+                  <option value="{{p.0}}">{{p.1}}</option>
+                {% endfor %}
+              </select>
             </div>
             <div class="form-group col-md-12">
-              <label for="p_nom_menu" >Descripcion:</label>
-              <textarea name="" id="" class="form-control" cols="30" rows="5"></textarea>
+              <label for="p_descripcion" >Descripcion:</label>
+              <textarea name="p_descripcion" id="" class="form-control" cols="30" rows="5"></textarea>
             </div>
           </div>
         </div>
