--- a/app/templates/app/administrador/insumos/editarInsumos.html
+++ b/app/templates/app/administrador/insumos/editarInsumos.html
@@ -69,20 +69,58 @@
 {% load static %}
     <!-- /.content-wrapper -->
     
-    {% load crispy_forms_tags %}
     <div id="register" class="col-lg-6 col-sm-9 mt-5 mx-1 d-block mx-auto" style="text-align:center;">
-      <form action="" method="post">
-        <h2>Editar Insumo</h2>
-        <hr>
-        {% csrf_token %}
-        {{ form | crispy }}
+      <h2>Actualización de Insumos</h2>
+      <hr>
+      <form action="/actualizar-insumo/" method="GET">
+        
+        <!-- INPUT COMBOX CON LA API DE LISTAR -->
+        
         <div class="col">
           <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexInsumos' %}" style="color: white;">Volver</a>
-            </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
+            <div class="form-group d-none">
+              <input type="hidden" name="p_id_insumo" class="form-control" value="{{Insumo.0.0}}"/>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="p_nom_insumo">Nombre:</label>
+              <input type="text" name="p_nom_insumo" class="form-control" value="{{Insumo.0.1}}" required readonly>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_id_tipo_insumo">Tipo Insumo</label>
+              <select class="form-control" name="p_id_tipo_insumo" id="" value="" required>
+                {% for ti in TipoInsumo %}
+                  {% if Insumo.0.2 == ti.0 %}
+                    <option value="{{ti.0}}" selected>{{ti.1}}</option>
+                  {% else %}
+                    <option value="{{ti.0}}">{{ti.1}}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
+            </div>
+
+            <div class="form-group col-md-6">
+              <label for="p_id_cat_insumo">Categoría Insumo</label>
+              <select class="form-control" name="p_id_cat_insumo" id="" value="" required>
+                {% for ci in CategoriaInsumo %}
+                  {% if Insumo.0.4 == ci.0 %}
+                    <option value="{{ci.0}}" selected>{{ci.1}}</option>
+                  {% else %}
+                    <option value="{{ci.0}}">{{ci.1}}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
+            </div>
+            
           </div>
+        </div>
+        <div class="col mt-4">
+          <div class="row">
+            <a href="{% url 'indexInsumos' %}"
+            class="btn btn-primary d-flex mr-auto"
+            >Volver</a>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
+          </div>  
         </div>
       </form>
     </div>
