--- a/app/templates/app/administrador/insumos/indexInsumos.html
+++ b/app/templates/app/administrador/insumos/indexInsumos.html
@@ -31,12 +31,12 @@
       {% for i in Insumos %}
       <tr>
         <!-- <th scope="row">{{ u.id }}</th> -->
-        <td>{{i.nom_insumo}}</td>
-        <td>{{i.id_tipo_ins}}</td>
-        <td>{{i.id_cat_ins}}</td>
+        <td>{{i.1}}</td>
+        <td>{{i.3}}</td>
+        <td>{{i.5}}</td>
         <td class="p-1">
-          <a href="{% url 'modificarInsumos' i.id_ins %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
+          <a href="{% url 'modificarInsumos' i.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
+          <a onclick="eliminarInsumo({{ i.0 }})" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
         </td>
       </tr>
       {% endfor %}
@@ -51,5 +51,33 @@
   font-size: 14px;
 }
 </style>
+
+{% endblock %}
+
+
+
+{% block js %}
+
+<script>
+    function eliminarInsumo(id)
+    {
+      swal.fire({
+        "title": "¿Estás seguro?",
+        "text": "¡Estás apunto de eliminar el insumo!",
+        "icon": "question",
+        "showCancelButton": true,
+        "cancelButtonText": "No, cancelar",
+        "confirmButtonText": "Si, Eliminar",
+        "reverseButtons": true,
+        "confirmButtonColor": "#dc3545",
+        "cancelButtonColor": "#0069D9"
+      })
+      .then(function(result) {
+        if(result.isConfirmed) {
+          window.location.href = "eliminar/"+id+"/"
+        }
+      })
+    }
+  </script>
 
 {% endblock %}
