--- a/app/templates/app/administrador/insumos/registroInsumos.html
+++ b/app/templates/app/administrador/insumos/registroInsumos.html
@@ -1,8 +1,67 @@
 {% extends 'app/base.html' %}
 
-{% block js %}
+{% block contenido %}
+{% load static %}
+    <!-- /.content-wrapper -->
+    
+    <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
+      <h2>Registro de Insumos</h2>
+      <hr>
+      <form action="/crear-insumo/" method="GET">
+        
+        <!-- INPUT COMBOX CON LA API DE LISTAR -->
+        
+        <div class="col">
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="p_nom_insumo">Nombre:</label>
+              <input type="text" name="p_nom_insumo" class="form-control" required>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_id_tipo_insumo">Tipo Insumo</label>
+              <select class="form-control" name="p_id_tipo_insumo" id="" required>
+                {% for ti in TipoInsumos %}
+                  <option value="{{ti.0}}">{{ti.1}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_id_cat_insumo">Categoría Insumo</label>
+              <select class="form-control" name="p_id_cat_insumo" id="" required>
+                {% for ci in CategoriasInsumo %}
+                  <option value="{{ci.0}}">{{ci.1}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="col mt-4">
+          <div class="row">
+            <button class="btn btn-primary d-flex mr-auto">
+              <a href="{% url 'indexInsumos' %}" 
+              style="color: white;"
+              >Volver</a>
+            </button>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
+
+          </div>  
+        </div>
+      </form>
+    </div>
+  <!-- /#wrapper -->
+
+  <style>
+    #user-table{
+      font-size: 14px;
+    }
+  </style>
+  {% endblock %}
+
+  {% block js %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script>
+  <!-- <script>
     $(document).ready(function() {
       $('#id_username').prop('required', true);
       $('#id_first_name').prop('required', true);
@@ -70,39 +129,7 @@
         }
       });
     });
+  </script> -->
 
-    
-  </script>
+  
 {% endblock %}
-
-{% block contenido %}
-{% load static %}
-    <!-- /.content-wrapper -->
-    
-    {% load crispy_forms_tags %}
-    <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-      <h2>Registro de Insumos</h2>
-      <hr>
-      <form action="" method="post">
-        {% csrf_token %}
-        {{ form | crispy }}
-        <div class="col">
-          <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexInsumos' %}" 
-              style="color: white;"
-              >Volver</a>
-            </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  <!-- /#wrapper -->
-
-  <style>
-    #user-table{
-      font-size: 14px;
-    }
-  </style>
-  {% endblock %}
