--- a/app/templates/app/administrador/productos/registroProductos.html
+++ b/app/templates/app/administrador/productos/registroProductos.html
@@ -8,38 +8,43 @@
 {% block contenido %}
 {% load static %}
     <!-- /.content-wrapper -->
-    
-    {% load crispy_forms_tags %}
+
     <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-      <h2>Registro de Menu</h2>
+      <h2>Registro de Productos</h2>
       <hr>
-      <form action="/crear-menus/" method="GET">
+      <form action="/crear-producto/" method="GET">
         <div class="col mt-4">
           <div class="row">
             <div class="form-group col-md-6">
-              <label for="p_nro_menu">Nombre:</label>
-              <input type="text" name="p_nro_menu" class="form-control" required>
+              <label for="p_nom_producto">Nombre:</label>
+              <input type="text" name="p_nom_producto" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
-              <label for="p_nom_menu" >Precio:</label>
-              <input type="text" name="p_nom_menu" id="" class="form-control" required>
+              <label for="p_precio">Precio:</label>
+              <input type="text" name="p_precio" id="" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
-              <label for="p_nom_menu" >Categoria:</label>
-              <select name="" id="" class="form-control">
-                <option value="">PLSQL</option>
+              <label for="p_id_cat">Categoria:</label>
+              <select name="p_id_cat" id="" class="form-control">
+                {% for c in Categorias %}
+                  <option value="{{c.0}}">{{c.1}}</option>
+                {% endfor %}
               </select>
             </div>
             <div class="form-group col-md-6">
-              <label for="p_nom_menu" >Tipo:</label>
-              <select name="" id="" class="form-control">
-                <option value="">PLSQL</option>
+              <label for="p_id_tipo">Tipo:</label>
+              <select name="p_id_tipo" id="" class="form-control">
+                {% for t in TipoProductos %}
+                  <option value="{{t.0}}">{{t.1}}</option>
+                {% endfor %}
               </select>
             </div>
             <div class="form-group col-md-6">
-              <label for="p_nom_menu" >Receta:</label>
-              <select name="" id="" class="form-control">
-                <option value="">PLSQL</option>
+              <label for="p_id_receta">Receta:</label>
+              <select name="p_id_receta" id="" class="form-control">
+                {% for r in Recetas %}
+                  <option value="{{r.0}}">{{r.1}}</option>
+                {% endfor %}
               </select>
             </div>
           </div>
@@ -47,11 +52,9 @@
 
         <div class="col mt-4">
           <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexProductos' %}" 
-              style="color: white;"
-              >Volver</a>
-            </button>
+            <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexProductos' %}"> 
+              Volver
+            </a>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
           </div>
         </div>
