--- a/app/templates/app/administrador/productos/editarProductos.html
+++ b/app/templates/app/administrador/productos/editarProductos.html
@@ -1,52 +1,74 @@
 {% extends 'app/base.html' %}
 
-  
 {% block js %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
 {% endblock %}
 
 {% block contenido %}
 {% load static %}
-    
-  <div id="register" class="col-lg-6 col-sm-9 mt-5 mx-1 d-block mx-auto" style="text-align:center;">
-    <h2>Editar Producto</h2>
-    <hr>
-    <form action="/editar-productos/" method="GET">
-      {% for m in Menus %}
-      <div class="col mt-4">
-        <div class="row">
-          <!-- ID -->
-          <input type="hidden" name="id" value="{{m.0}}">
-          <div class="form-group col-md-6">
-            <label for="p_nro_menu">Nro° Menu:</label>
-            <input type="text" name="p_nro_menu" class="form-control" value="{{m.1}}" required>
-          </div>
-          <div class="form-group col-md-6">
-            <label for="p_nom_menu" >Nombre:</label>
-            <input type="text" name="p_nom_menu" id="" class="form-control" value="{{m.2}}" required>
+    <!-- /.content-wrapper -->
+
+    <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
+      <h2>Editar Productos</h2>
+      <hr>
+      <form action="/editar-producto/" method="GET">
+        <div class="col mt-4">
+          <div class="row">
+            {% for p in Productos %}
+            <!-- id -->
+            <input type="hidden" name="p_id_producto" value="{{p.0}}">
+            <div class="form-group col-md-6">
+              <label for="p_nom_prod">Nombre:</label>
+              <input type="text" name="p_nom_prod" class="form-control" value="{{p.1}}" required>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="p_precio">Precio:</label>
+              <input type="text" name="p_precio" id="" class="form-control" value="{{p.2}}" required>
+            </div>
+            {% endfor %}
+            <div class="form-group col-md-6">
+              <label for="p_id_cat">Categoria:</label>
+              <select name="p_id_cat" id="" class="form-control">
+                {% for c in Categorias %}
+                  <option value="{{c.0}}">{{c.1}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="p_id_tipo">Tipo:</label>
+              <select name="p_id_tipo" id="" class="form-control">
+                {% for t in TipoProductos %}
+                  <option value="{{t.0}}">{{t.1}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="p_id_receta">Receta:</label>
+              <select name="p_id_receta" id="" class="form-control">
+                {% for r in Recetas %}
+                  <option value="{{r.0}}">{{r.1}}</option>
+                {% endfor %}
+              </select>
+            </div>
           </div>
         </div>
-      </div>
-      {% endfor %}
-      <div class="col mt-4">
-        <div class="row">
-          <button class="btn btn-primary d-flex mr-auto">
-            <a href="{% url 'indexMenus' %}" 
-            style="color: white;"
-            >Volver</a>
-          </button>
-          <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
+
+        <div class="col mt-4">
+          <div class="row">
+            <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexProductos' %}"> 
+              Volver
+            </a>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
+          </div>
         </div>
-      </div>
-    </form>
-  </div>
- 
+      </form>
+    </div>
+  <!-- /#wrapper -->
 
   <style>
     #user-table{
       font-size: 14px;
     }
   </style>
-  
   {% endblock %}
-
