--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -11,7 +11,7 @@
 
     {% if user.is_authenticated %}
         <h3>Usuario autenticado</h3>
-        <a href="#">@{{ user.username }}</a>
+        <a href="{% url 'dashboard' %}">@{{ user.username }}</a>
         <br>
         <a href="{% url 'logout' %}">Cerrar Sesión</a>
     {% else %}
