--- a/app/templates/app/administrador/recetas/indexIngredientesRecetas.html
+++ b/app/templates/app/administrador/recetas/indexIngredientesRecetas.html
@@ -6,10 +6,10 @@
 
 <!-- {{message}} -->
 <div id="menus-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-  <h2>Detalle Menu</h2>
+  <h2>Ingredientes Receta</h2>
 
   <div id="toolbar">
-    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroMenusProductos' id %}" style="color: white; text-decoration: none;">Agregar Detalle</a></button>
+    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroIngredientesRecetas' id %}" style="color: white; text-decoration: none;">Agregar Ingrediente</a></button>
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
   data-toggle="table"
@@ -19,20 +19,16 @@
     <thead class="thead-dark">
       <tr>
         <!-- <th scope="col">#</th> -->
-        <th scope="col">Producto</th>
-        <th scope="col">Descripción</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Ingrediente</th>
+        <th scope="col">Cantidad</th>
       </tr>
     </thead>
     <tbody>
-      {% for m in Menus %}
+      {% for i in IngredientesRecetas %}
       <tr>
         <!-- <th scope="row">{{ u.id }}</th> -->
-        <td>{{m.4}}</td>
-        <td>{{m.7}}</td>
-        <td class="p-1">
-          <a href="{% url 'modificarMenusProductos' m.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-        </td>
+        <td>{{i.3}}</td>
+        <td>{{i.4}}</td>
       </tr>
       {% endfor %}
     </tbody>
