[REFACTOR] recetas y menus

--- a/app/templates/app/administrador/menus/registroMenus.html
+++ b/app/templates/app/administrador/menus/registroMenus.html
@@ -27,11 +27,9 @@
         </div>
         <div class="col mt-4">
           <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexMenus' %}" 
-              style="color: white;"
-              >Volver</a>
-            </button>
+            <a href="{% url 'indexMenus' %}" class="btn btn-primary d-flex mr-auto">
+              Volver
+            </a>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
           </div>
         </div>
