--- a/app/templates/app/administrador/menus/indexMenusProductos.html
+++ b/app/templates/app/administrador/menus/indexMenusProductos.html
@@ -37,7 +37,17 @@
       {% endfor %}
     </tbody>
   </table>
+  <div class="col mt-4">
+    <div class="row">
+      <a href="{% url 'indexMenus' %}" class="btn btn-primary d-flex mr-auto">
+        <i class="fa fa-arrow-left">
+          Volver a Menus
+        </i>
+      </a>
+    </div>
+  </div>
 </div>
+
 </div>
 <!-- /#wrapper -->
 
