--- a/app/templates/app/administrador/recetas/indexIngredientesRecetas.html
+++ b/app/templates/app/administrador/recetas/indexIngredientesRecetas.html
@@ -33,7 +33,17 @@
       {% endfor %}
     </tbody>
   </table>
+  <div class="col mt-4">
+    <div class="row">
+      <a href="{% url 'indexRecetas' %}" class="btn btn-primary d-flex mr-auto">
+        <i class="fa fa-arrow-left">
+          Volver a Recetas
+        </i>
+      </a>
+    </div>
+  </div>
 </div>
+
 </div>
 <!-- /#wrapper -->
 
