--- a/app/templates/app/administrador/mesas/registroMesas.html
+++ b/app/templates/app/administrador/mesas/registroMesas.html
@@ -33,10 +33,9 @@
         </div>
         <div class="col mt-4">
           <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexMesas' %}" 
-              style="color: white;"
-              >Volver</a>
+            <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexMesas' %}" >
+              Volver
+            </a>
             </button>
             <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
 
