--- a/app/templates/app/administrador/mesas/editarMesas.html
+++ b/app/templates/app/administrador/mesas/editarMesas.html
@@ -98,11 +98,9 @@
       </div>
       <div class="col mt-4">
         <div class="row">
-          <button class="btn btn-primary d-flex mr-auto" type="button">
-            <a href="{% url 'indexMesas' %}" 
-            style="color: white;"
-            >Volver</a>
-          </button>
+          <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexMesas' %}">
+            Volver
+          </a>
           <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
         </div>  
       </div>
