--- a/app/templates/app/administrador/productos/editarProductos.html
+++ b/app/templates/app/administrador/productos/editarProductos.html
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_precio">Precio:</label>
-              <input type="text" name="p_precio" id="" class="form-control" value="{{p.2}}" required>
+              <input type="number" name="p_precio" id="" class="form-control" value="{{p.2}}" required>
             </div>
             {% endfor %}
             <div class="form-group col-md-6">
