--- a/app/templates/app/administrador/productos/registroProductos.html
+++ b/app/templates/app/administrador/productos/registroProductos.html
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_precio">Precio:</label>
-              <input type="text" name="p_precio" id="" class="form-control" required>
+              <input type="number" name="p_precio" id="" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_id_cat">Categoria:</label>
