--- a/app/templates/app/finanzas/facturas/editarFacturas.html
+++ b/app/templates/app/finanzas/facturas/editarFacturas.html
@@ -69,20 +69,74 @@
 {% load static %}
     <!-- /.content-wrapper -->
     
-    {% load crispy_forms_tags %}
     <div id="register" class="col-lg-6 col-sm-9 mt-5 mx-1 d-block mx-auto" style="text-align:center;">
-      <form action="" method="post">
-        <h2>Editar Factura</h2>
-        <hr>
-        {% csrf_token %}
-        {{ form | crispy }}
+      <h2>Actualización de Facturas</h2>
+      <hr>
+      <form action="/actualizar-factura/" method="GET">
+        
+        <!-- INPUT COMBOX CON LA API DE LISTAR -->
+        
         <div class="col">
           <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexGestionFacturas' %}" style="color: white;">Volver</a>
-            </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Modificar</button>
+            <div class="form-group d-none">
+              <input type="hidden" name="p_id_factura" class="form-control" value="{{Factura.0.0}}"/>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="p_nro_factura">N° de Factura:</label>
+              <input type="text" name="p_nro_factura" class="form-control" value="{{Factura.0.1}}" required readonly>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_fec_emision">Fecha de emisión:</label>
+              <input type="date" name="p_fec_emision" class="form-control" value="{{FechaEmision}}" required>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_fec_pago">Fecha de Pago:</label>
+              <input type="date" name="p_fec_pago" class="form-control" value="{{FechaPago}}" required>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_neto">Neto:</label>
+              <input type="text" name="p_neto" class="form-control" value="{{Factura.0.4}}" required>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_id_oc">Orden de Compra</label>
+              <select class="form-control" name="p_id_oc" id="" value="" required>
+                {% for oc in OrdenCompra %}
+                  {% if Factura.0.7 == oc.0 %}
+                    <option value="{{oc.0}}" selected>{{oc.1}}</option>
+                  {% else %}
+                    <option value="{{oc.0}}">{{oc.1}}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
+            </div>
+            
+            
+            <div class="form-group col-md-6">
+              <label for="p_id_forma_pago">Forma de Pago</label>
+              <select class="form-control" name="p_id_forma_pago" id="" value="" required>
+                {% for fp in FormaPago %}
+                  {% if Factura.0.9 == fp.0 %}
+                    <option value="{{fp.0}}" selected>{{fp.1}}</option>
+                  {% else %}
+                    <option value="{{fp.0}}">{{fp.1}}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
+            </div>
+            
           </div>
+        </div>
+        <div class="col mt-4">
+          <div class="row">
+            <a href="{% url 'indexGestionFacturas' %}" type="button"
+            class="btn btn-primary d-flex mr-auto"
+            >Volver</a>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
+          </div>  
         </div>
       </form>
     </div>
