--- a/app/templates/app/finanzas/facturas/indexFacturas.html
+++ b/app/templates/app/finanzas/facturas/indexFacturas.html
@@ -4,12 +4,14 @@
 {% block contenido %}
 {% load static %}
 
-<!-- {{message}} -->
-<div id="proveedores-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-  <h2>Gestion Facturas</h2>
+{{message}}
+<div id="productos-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
+  <h2>Gestión Facturas</h2>
 
   <div id="toolbar">
-    <button class="btn btn-primary d-flex pr-auto mb-2"><a href="{% url 'registroGestionFacturas' %}" style="color: white; text-decoration: none;">Ingresar Factura</a></button>
+    <button class="btn btn-primary d-flex pr-auto mb-2">
+        <a href="{% url 'registroFacturas' %}" style="color: white; text-decoration: none;">Crear Factura</a>
+    </button>
   </div>
   <table id="table" class="table table-striped table-bordered" style="width: 100%;"
   data-toggle="table"
@@ -19,8 +21,8 @@
     <thead class="thead-dark">
       <tr>
         <!-- <th scope="col">#</th> -->
-        <th scope="col">N° Facturas</th>
-        <th scope="col">Fecha Emision</th>
+        <th scope="col">N° Factura</th>
+        <th scope="col">Fecha Emisión</th>
         <th scope="col">Fecha de Pago</th>
         <th scope="col">Total Neto</th>
         <th scope="col">Iva</th>
@@ -34,20 +36,18 @@
     <tbody>
       {% for f in Facturas %}
       <tr>
-        <!-- <th scope="row">{{ u.id }}</th> -->
-        <td>{{f.nro_factura}}</td>
-        <td>{{f.fec_emision}}</td>
-        <td>{{f.fec_pago}}</td>
-        <td>{{f.total_neto}}</td>
-        <td>{{f.iva}}</td>
-        <td>{{f.total}}</td>
-        <td>{{f.id_oc}}</td>
-        <td>{{f.id_forma_pago}}</td>
-        <td>{{f.id_est_factura}}</td>
+        <td>{{f.1}}</td>
+        <td>{{f.2}}</td>
+        <td>{{f.3}}</td>
+        <td>{{f.4}}</td>
+        <td>{{f.5}}</td>
+        <td>{{f.6}}</td>
+        <td>{{f.8}}</td>
+        <td>{{f.10}}</td>
+        <td>{{f.12}}</td>
         <td class="p-1">
-          <a href="{% url 'modificarGestionFacturas' f.id_factura %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-          <a href="" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit">Ver Detalle</i></a>
-          <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a>
+          <a href="{% url 'modificarGestionFacturas' f.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
+          <a onclick="eliminarFactura({{ f.0 }})" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
         </td>
       </tr>
       {% endfor %}
@@ -58,9 +58,37 @@
 <!-- /#wrapper -->
 
 <style>
-#proveedores-table{
+#productos-table{
   font-size: 14px;
 }
 </style>
+
+{% endblock %}
+
+
+
+{% block js %}
+
+<script>
+    function eliminarFactura(id)
+    {
+      swal.fire({
+        "title": "¿Estás seguro?",
+        "text": "¡Estás apunto de eliminar la factura!",
+        "icon": "question",
+        "showCancelButton": true,
+        "cancelButtonText": "No, cancelar",
+        "confirmButtonText": "Si, Eliminar",
+        "reverseButtons": true,
+        "confirmButtonColor": "#dc3545",
+        "cancelButtonColor": "#0069D9"
+      })
+      .then(function(result) {
+        if(result.isConfirmed) {
+          window.location.href = "eliminar/"+id+"/"
+        }
+      })
+    }
+  </script>
 
 {% endblock %}
