--- a/app/templates/app/finanzas/facturas/registroFacturas.html
+++ b/app/templates/app/finanzas/facturas/registroFacturas.html
@@ -1,8 +1,81 @@
 {% extends 'app/base.html' %}
 
-{% block js %}
+{% block contenido %}
+{% load static %}
+    <!-- /.content-wrapper -->
+    
+    <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
+      <h2>Registro de Facturas</h2>
+      <hr>
+      <form action="/crear-factura/" method="GET">
+        
+        <!-- INPUT COMBOX CON LA API DE LISTAR -->
+        
+        <div class="col">
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="p_nro_factura">N° Factura:</label>
+              <input type="text" name="p_nro_factura" class="form-control" required>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_fec_emision">Fecha emisión:</label>
+              <input type="date" name="p_fec_emision" class="form-control" required>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_fec_pago">Fecha Pago:</label>
+              <input type="date" name="p_fec_pago" class="form-control" required>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_neto">Neto:</label>
+              <input type="text" name="p_neto" class="form-control" required>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_id_oc">Orden de compra</label>
+              <select class="form-control" name="p_id_oc" id="" required>
+                {% for oc in OrdenCompra %}
+                  <option value="{{oc.0}}">{{oc.1}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            
+            <div class="form-group col-md-6">
+              <label for="p_id_forma_pago">Forma de pago</label>
+              <select class="form-control" name="p_id_forma_pago" id="" required>
+                {% for fp in FormaPago %}
+                  <option value="{{fp.0}}">{{fp.1}}</option>
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="col mt-4">
+          <div class="row">
+            <a href="{% url 'indexGestionFacturas' %}" 
+            style="color: white;"
+            class="btn btn-primary d-flex mr-auto"
+            >Volver</a>
+            <button class="btn btn-primary d-flex ml-auto" type="submit">Aceptar</button>
+
+          </div>  
+        </div>
+      </form>
+    </div>
+  <!-- /#wrapper -->
+
+  <style>
+    #user-table{
+      font-size: 14px;
+    }
+  </style>
+  {% endblock %}
+
+  {% block js %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script>
+  <!-- <script>
     $(document).ready(function() {
       $('#id_username').prop('required', true);
       $('#id_first_name').prop('required', true);
@@ -70,39 +143,7 @@
         }
       });
     });
+  </script> -->
 
-    
-  </script>
+  
 {% endblock %}
-
-{% block contenido %}
-{% load static %}
-    <!-- /.content-wrapper -->
-    
-    {% load crispy_forms_tags %}
-    <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-      <h2>Registro de Factura</h2>
-      <hr>
-      <form action="" method="post">
-        {% csrf_token %}
-        {{ form | crispy }}
-        <div class="col">
-          <div class="row">
-            <button class="btn btn-primary d-flex mr-auto">
-              <a href="{% url 'indexGestionFacturas' %}" 
-              style="color: white;"
-              >Volver</a>
-            </button>
-            <button class="btn btn-primary d-flex ml-auto" type="submit">Guardar Factura</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  <!-- /#wrapper -->
-
-  <style>
-    #user-table{
-      font-size: 14px;
-    }
-  </style>
-  {% endblock %}
