[ADD] listar pedidos en bodeguero y ver detalle

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -165,6 +165,10 @@
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Stock de Insumos</span>
           </a>
+          <a class="nav-link" href="{% url 'indexPedidosBodegas' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Pedidos</span>
+          </a>
         </div>
         {% endif %}
       </li>
