--- a/app/templates/app/bodega/pedidos/detallePedidosBodegas.html
+++ b/app/templates/app/bodega/pedidos/detallePedidosBodegas.html
@@ -10,7 +10,7 @@
     
 
     <div id="register" class="col-lg-6 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-      <h2>Detalle Pedido Proveedor</h2>
+      <h2>Detalle Pedido Realizado</h2>
       <hr>
         {% for d in DetallePedidos %}
         <div class="col">
@@ -37,23 +37,9 @@
         {% endfor %}
         <div class="col mt-4">
             <div class="row">
-                <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexPedidosProveedor' %}">
+                <a class="btn btn-primary d-flex mr-auto" href="{% url 'indexPedidosBodegas' %}">
                     Volver
                 </a>
-
-                <form action="/autorizar-pedido/" method="GET">
-                    <input type="hidden" name="p_id_pedido" value="{{DetallePedidos.0.1}}">
-                    <input type="hidden" name="p_opcion1" value="1">
-                    <input type="hidden" name="p_opcion2" value="0">
-                    <button class="btn btn-success d-flex ml-auto mr-3" type="submit">Autorizar Pedido</button>
-                </form>
-
-                <form action="/autorizar-pedido/" method="GET">
-                    <input type="hidden" name="p_id_pedido" value="{{DetallePedidos.0.1}}">
-                    <input type="hidden" name="p_opcion1" value="0">
-                    <input type="hidden" name="p_opcion2" value="1">
-                    <button class="btn btn-danger d-flex ml-auto" type="submit">Rechazar Pedido</button>
-                </form>
             </div>  
         </div>
     </div>
